# ez-intrin

./: CMakeLists.txt  README.md
cmake/: check-system.cmake  postconfig.cmake
include/ez/: intrinsics.hpp
include/ez/intern/: clang.hpp  fallback.hpp  gnu.hpp  msvc.hpp
lib/: fallback.cpp  msvc.cpp
share/ez-intrinsics/: check-system.cmake  ez-intrinsics-config.cmake
share/preprocess/: CMakeLists.txt  clang.cpp  gcc.cpp  msvc.cpp
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  bitops.cpp
